<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.connector.View.LoginActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">


<TextView
    android:id="@+id/lb_greeting1Str"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:text="@string/lb_greeting1Str"
    android:textAlignment="center"
    android:padding="10dp"
    android:textSize="20sp" />

<TextView
    android:id="@+id/lb_greeting2Str"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/lb_greeting2Str"
    android:textAlignment="center"
    android:textSize="16sp" />

<TextView
    android:id="@+id/lb_loginLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:text="@string/lb_loginLabel"
    android:textAlignment="center"
    android:padding="10dp"
    />

<EditText
    android:id="@+id/tf_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:inputType="phone"
    android:padding="10dp"
    android:maxLength="10"
    android:textAlignment="center"/>

<TextView
    android:id="@+id/lb_passwordLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:text="@string/lb_passwordLabel"
    android:textAlignment="center"
    android:padding="10dp"/>

<EditText
    android:id="@+id/tf_passwordInLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:textAlignment="center"
    android:padding="10dp"
    android:inputType="textPassword" />

<Button
    android:id="@+id/btn_loginButton"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="login"
    android:text="@string/btn_loginButton" />

<Button
    android:id="@+id/btn_registrationButton"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="registration"
    android:text="@string/btn_registrationButton" />

</LinearLayout>
